connected firebase to the app

--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.SkejulaMVP"
+      "bundleIdentifier": "com.anonymous.SkejulaMVP",
+       "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
       "adaptiveIcon": {
